@@ -1,4 +1,4 @@
-AC_INIT([eid-mw-sdk-c], [0.2.1], [vincent.hardy.be@gmail.com], [eid-mw-sdk-c], [http://github.com/linuxunderground/eid-mw-sdk-c])
+AC_INIT([eid-mw-sdk-c], [0.2.2], [vincent.hardy.be@gmail.com], [eid-mw-sdk-c], [http://github.com/linuxunderground/eid-mw-sdk-c])
 AM_INIT_AUTOMAKE([dist-xz])
 
 
@@ -13,7 +13,13 @@ AC_CHECK_HEADERS([limits.h malloc.h dlfcn.h openssl/bio.h openssl/evp.h openssl/
   [], [AC_MSG_ERROR([could not find header])])
 
 
-AC_CHECK_LIB(jpeg, jpeg_mem_src, [HAVE_JPEGLIB=1; JPEG_LIBS='-ljpeg'], [HAVE_JPEGLIB=0])
+AC_CHECK_LIB(jpeg, jpeg_mem_src, [HAVE_JPEGLIB=1], [HAVE_JPEGLIB=0])
+AC_ARG_ENABLE(jpeg, AS_HELP_STRING([--disable-jpeg], [disregard detection result of libjpeg]),
+  [if test $enableval = no; then HAVE_JPEGLIB=0; fi])
+if test x$HAVE_JPEGLIB = x1
+then
+  JPEG_LIBS='-ljpeg'
+fi
 AM_CONDITIONAL([JPEG], [test x$HAVE_JPEGLIB = x1])
 AC_SUBST([JPEG_LIBS])
 AC_DEFINE_UNQUOTED([HAVE_JPEGLIB], $HAVE_JPEGLIB, [Define to 1 if you have libjpeg installed])
